#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-plugin"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "zenoh_plugin_zenoh_flow"

[features]
default = ["no_mangle"]
no_mangle = ["zenoh-plugin-trait/no_mangle"]

[dependencies]
async-std = "=1.12.0"
async-trait = "0.1.57"
clap = "4.0"
env_logger = "0.10"
flume = "0.10.14"
futures = "0.3.24"
git-version = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
zenoh = { workspace = true, features = ["unstable"] }
zenoh-collections = { workspace = true }
zenoh-core = { workspace = true }
zenoh-ext = { workspace = true, features = ["unstable"] }
zenoh-flow = { version = "0.5.0-alpha.1", path = "../zenoh-flow" }
zenoh-flow-daemon = { version = "0.5.0-alpha.1", path = "../zenoh-flow-daemon" }
zenoh-plugin-trait = { workspace = true, default-features = false }

[build-dependencies]
rustc_version = "0.4"

[package.metadata.deb]
assets = [
  # binary
  [
    "/usr/lib/libzenoh_plugin_zenoh_flow.so",
    "644",
    "target/release/libzenoh_plugin_zenoh_flow.so",
  ],
  # assets
  [
    "../zenoh-flow-daemon/etc/extensions.d/placeholder",
    "/etc/zenoh-flow/extensions.d/placeholder",
    "644",
  ],
  [
    "../zenoh-flow-daemon/var/*",
    "/var/zenoh-flow",
    "644",
  ],
  [
    "/etc/zenoh-flow/zenoh-zf-plugin.json",
    "644",
    "etc/zenoh-zf-plugin.json",
  ],
]
copyright = "2017, 2022 ZettaScale Technology Inc."
depends = "$auto, zenohd (=0.7.0-rc)"
license-file = ["../LICENSE", "0"]
maintainer = "zenoh-dev@eclipse.org"
name = "zenoh-plugin-zenoh-flow"
section = "net"
