#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Internal crate for Zenoh-Flow."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-flow-runtime"
repository = { workspace = true }
version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
bincode = { version = "1.3" }
flume = { workspace = true }
futures = { workspace = true }
libloading = "0.8"
serde = { workspace = true }
thiserror = "1"
tracing = { workspace = true }
uhlc = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true, optional = true }
zenoh-flow-commons = { workspace = true }
zenoh-flow-descriptors = { workspace = true }
zenoh-flow-nodes = { workspace = true }
zenoh-flow-records = { workspace = true }

[features]
default = ["zenoh"]
zenoh = ["dep:zenoh"]
shared-memory = ["zenoh"]
test-utils = []

[dev-dependencies]
serde_yaml = { workspace = true }
zenoh-flow-runtime = { path = ".", features = ["test-utils"] }
