#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow"
version = "0.4.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@zettascale.tech>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.11.0", features = ["attributes"] }
async-lock = "2.4.0"
async-trait = "0.1.50"
async-recursion = "1.0.0"
base64 = "0.13.0"
bincode = { version = "1.3"}
derive_more = "0.99.10"
clap = { version = "3.1", features = ["derive"] }
const_format = "0.2.22"
env_logger = "0.9"
event-listener = "2.5.1"
flume = "0.10"
futures = "0.3.15"
futures-lite = "1.11.3"
git-version = "0.3"
itertools = "0.10.3"
libloading = "0.7.0"
log = "0.4"
more-asserts = "0.2.2"
paste = "1.0"
petgraph = "0.6.0"
pin-project-lite = "0.2.4"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_cbor = {version = "0.11", optional = true}
serde_derive = "1.0.55"
serde_json = { version = "1.0", optional = true}
serde_yaml = {version = "0.8.13"}
typetag = "0.1"
uhlc = "0.5"
url = "2.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master"}
zenoh-flow-derive = {path = "../zenoh-flow-derive"}
zenoh-sync = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zrpc-macros = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "master" }
zrpc = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "master" }

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
rustc_version = "0.4.0"

[features]
data_bincode = []
data_json = ["serde_json"]
data_cbor = ["serde_cbor"]

debug = ["data_json"]
default = ["debug"]
