#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
async-lock = "2.4.0"
async-recursion = "1.0.0"
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1.50"
base64 = "0.20.0"
bincode = { version = "1.3"}
bytesize = "1.2.0"
clap = { workspace = true, features = ["derive"] }
const_format = "0.2.22"
derive_more = "0.99.10"
env_logger = "0.10"
event-listener = "2.5.1"
flume = "0.10"
futures = "0.3.15"
futures-lite = "1.12"
git-version = "0.3"
humantime = "2.1.0"
itertools = "0.10.3"
libloading = "0.7.0"
log = "0.4"
more-asserts = "0.3"
paste = "1.0"
petgraph = "0.6.0"
pin-project-lite = "0.2.4"
ramhorns = "0.14"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_cbor = {version = "0.11", optional = true}
serde_derive = "1.0.55"
serde_json = { version = "1.0", optional = true}
serde_yaml = {version = "0.9"}
typetag = "0.2"
uhlc = "0.5.1"
url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { workspace = true, features = ["shared-memory"] }
zenoh-flow-derive = { version = "0.6.0-dev", path = "../zenoh-flow-derive" }
zenoh-sync = { workspace = true }
zenoh-util = { workspace = true }
zrpc = { workspace = true }
zrpc-macros = { workspace = true }

[dev-dependencies]
tempdir = "0.3.7"
prost = "0.11"

[build-dependencies]
rustc_version = "0.4.0"

[features]
data_bincode = []
data_json = ["serde_json"]
data_cbor = ["serde_cbor"]

debug = ["data_json"]
default = ["debug"]
