#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
async-lock = "2.4.0"
async-recursion = "1.0.0"
async-std = { workspace = true, features = ["attributes"] }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { version = "1.3" }
bytesize = "1.2.0"
clap = { workspace = true, features = ["derive"] }
const_format = "0.2.22"
derive_more = "0.99.10"
env_logger = { workspace = true }
event-listener = "3.0"
flume = { workspace = true }
futures = { workspace = true }
futures-lite = "1.12"
git-version = { workspace = true }
humantime = "2.1"
itertools = "0.11"
libloading = "0.8"
log = { workspace = true }
more-asserts = "0.3"
paste = "1.0"
petgraph = "0.6.0"
pin-project-lite = "0.2.4"
ramhorns = "0.14"
serde = { workspace = true, features = ["derive", "rc"] }
serde_cbor = { version = "0.11", optional = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true }
typetag = "0.2"
uhlc = { workspace = true }
url = "2.2"
uuid = { workspace = true, features = ["serde", "v4"] }
zenoh = { workspace = true, features = ["shared-memory"] }
zenoh-flow-derive = { version = "0.6.0-dev", path = "../zenoh-flow-derive" }
zenoh-sync = { workspace = true }
zenoh-util = { workspace = true }
zrpc = { workspace = true }
zrpc-macros = { workspace = true }

[dev-dependencies]
prost = "0.12"
tempdir = "0.3.7"

[build-dependencies]
rustc_version = "0.4.0"

[features]
data_bincode = []
data_cbor = ["serde_cbor"]
data_json = ["serde_json"]

debug = ["data_json"]
default = ["debug"]
