#
# Copyright © 2021 ZettaScale Technology <contact@zettascale.tech>
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "A Zenoh plugin embedding a Zenoh-Flow daemon."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-plugin-zenoh-flow"
repository = { workspace = true }
version = { workspace = true }

[features]
dynamic_plugin = []
default = ["dynamic_plugin"]

[lib]
crate-type = ["cdylib"]
name = "zenoh_plugin_zenoh_flow"

[dependencies]
async-std = { workspace = true }
flume = { workspace = true }
git-version = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uhlc = { workspace = true }
zenoh = { workspace = true, features = ["unstable"] }
zenoh-flow-daemon = { workspace = true }
zenoh-plugin-trait = { workspace = true }
zenoh-result = { workspace = true }
zenoh-util = { workspace = true }
