#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zfctl"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
base64 = "0.20.0"
clap = { workspace = true, features = ["derive"] }
derive_more = "0.99.10"
# FIXME: Remove when `std::env::home_dir` gets fixed.
dirs = "4.0.0"
env_logger = "0.10.0"
exitfailure = "0.5.1"
failure = "0.1.8"
git-version = "0.3.4"
log = "0.4"
prettytable-rs = "^0.10"
rand = "0.8.3"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.55", features = ["derive"] }
serde_derive = "1.0.55"
serde_json = "1.0.55"
serde_yaml = "0.9"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { workspace = true }
zenoh-flow = { version = "0.6.0-dev", path = "../zenoh-flow" }
zenoh-util = { workspace = true }
zrpc = { workspace = true }
zrpc-macros = { workspace = true }

# Debian package configuration

[package.metadata.deb]
assets = [
  # binary
  ["/usr/bin/zfctl", "755", "target/release/zfctl"],
  # config
  [".config/zfctl-zenoh.json", "/etc/zenoh-flow/zfctl-zenoh.json", "644"],
]
copyright = "2021 - 2023, ZettaScale Technology"
depends = "$auto"
extended-description = "Eclipse Zenoh Flow CLI tool"
license-file = ["../LICENSE", "0"]
maintainer = "ZettaScale Zenoh Team, <zenoh@zettascale.tech>"
priority = "optional"
section = "utils"

# RPM package configuration

[package.metadata.rpm]
package = "zfctl"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zfctl = { path = "/usr/bin/zfctl" }

[package.metadata.rpm.files]
"../.config/zfctl-zenoh.json" = { path = "/etc/zenoh-flow/zfctl-zenoh.json", mode = "644" }
