#
# Copyright © 2021 ZettaScale Technology <contact@zettascale.tech>
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zfctl"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
base64 = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
comfy-table = "7.1.0"
derive_more = "0.99.10"
dirs = "5.0"
git-version = { workspace = true }
itertools = "0.12"
log = { workspace = true }
rand = "0.8.3"
semver = { version = "1.0.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
zenoh = { workspace = true }
zenoh-flow-commons = { workspace = true }
zenoh-flow-daemon = { workspace = true }
zenoh-flow-descriptors = { workspace = true }
zenoh-util = { workspace = true }
